minor text update

--- a/web/templates/topics.html
+++ b/web/templates/topics.html
@@ -23,7 +23,7 @@
 
 
 {% block help %}
-        Showing popular comments for bibleverses. Click on a comment to search 'related' verses.
+        Showing popular phrases for bibleverse tweets. Click on a phrase to search 'related' verses.
 {% endblock help %}
 
 
