support robots.txt

--- a/web/static/biblestudy/partials/biblestudy-content.html
+++ b/web/static/biblestudy/partials/biblestudy-content.html
@@ -42,9 +42,9 @@
     <div class="panel-body">
         {{ result.text }}
     </div>
-    <!--
+   <!--
     <div class="panel-footer">
-        <a href="#" ng-click="recommend_action(result.bibleverse)"> Recommendations </a>
+        <a href="{{ result.bible_com_url }}"> Lookup '{{ result.bibleverse }}' on bible.com </a>
     </div>
     -->
 </div>
